Fix #2018: make toast z-index lower than navbar z-index (#3320)

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -1401,7 +1401,7 @@ md-card.oppia-dashboard-tile {
 
 .oppia-toast-container {
   position: fixed;
-  z-index: 999999;
+  z-index: 1000;
 }
 
 .oppia-toast-container * {
